--- a/client/package.json
+++ b/client/package.json
@@ -32,5 +32,5 @@
 			"last 1 safari version"
 		]
 	},
-	"proxy": "http://localhost:3030/api/v1"
+	"proxy": "https://bucket-list-server.herokuapp.com/api/v1"
 }
